[gd_scene load_steps=25 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://scripts/player_stair_test.gd" id="1_awcpd"]
[ext_resource type="Script" path="res://scripts/weapon.gd" id="2_fg077"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://weapons/blaster-repeater.tres" id="2_ir7uk"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="4_4ms7y"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="Script" path="res://scripts/FishingSM/DefaultFishingState.gd" id="5_g6r3q"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="5_ics1s"]
[ext_resource type="Script" path="res://scripts/FishingSM/FireFishingState.gd" id="6_j4o3f"]
[ext_resource type="Script" path="res://scripts/FishingSM/WaitingFishingState.gd" id="7_codwq"]
[ext_resource type="Script" path="res://scripts/FishingSM/ThrowFishingState.gd" id="7_w6l6i"]
[ext_resource type="Script" path="res://scripts/FishingSM/CatchFishingState.gd" id="8_mvy4j"]
[ext_resource type="Script" path="res://scripts/FishingSM/RetreiveFishingState.gd" id="9_40ij0"]
[ext_resource type="Script" path="res://scripts/FishingSM/PlayingFishingState.gd" id="12_py8p8"]
[ext_resource type="Script" path="res://scripts/FishingSM/DisabledState.gd" id="13_p57dx"]
[ext_resource type="Script" path="res://scripts/UI/AreaInfoUI.gd" id="14_mbniq"]
[ext_resource type="Script" path="res://scripts/FishingSM/AreaInfoFishingState.gd" id="14_sxfw8"]
[ext_resource type="PackedScene" uid="uid://c5xb58gno5o6x" path="res://objects/UI/AreaInfoEntry.tscn" id="15_usy7x"]
[ext_resource type="Script" path="res://scripts/in_menu_state.gd" id="16_2w7jl"]
[ext_resource type="Texture2D" uid="uid://2jld33y6h5pq" path="res://sprites/crosshair.png" id="16_n382o"]
[ext_resource type="Texture2D" uid="uid://dpue75ipy7nid" path="res://sprites/UI/book.png" id="18_ibvvf"]
[ext_resource type="Texture2D" uid="uid://dc4jgdvefokog" path="res://sprites/UI/TAB.png" id="19_tjo8l"]
[ext_resource type="Texture2D" uid="uid://xkew2pa6s43u" path="res://sprites/UI/livre.png" id="20_r8qkj"]
[ext_resource type="Texture2D" uid="uid://cggdw3uay3xls" path="res://sprites/UI/I.png" id="21_5um6n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.19861

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_awcpd")
STEP_HEIGHT = 0.25
push_force = 10.0
weapons = Array[ExtResource("2_fg077")]([ExtResource("2_ir7uk")])

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0392003, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Body" type="Node3D" parent="."]

[node name="Head" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Camera" type="Camera3D" parent="Body/Head"]
cull_mask = 1045501
current = true
far = 100.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Body/Head/Camera"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Body/Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 800)
render_target_update_mode = 0

[node name="CameraItem" type="Camera3D" parent="Body/Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1046530
fov = 40.0

[node name="Container" type="Node3D" parent="Body/Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="AnimatedSprite3D" parent="Body/Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = ExtResource("4_m6ukc")
frame = 2

[node name="RayCast" type="RayCast3D" parent="Body/Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)

[node name="HookSpawner" type="Node3D" parent="Body/Head/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.292484, -0.165401, -0.240849)

[node name="RayCastInteract" type="RayCast3D" parent="Body/Head/Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 32

[node name="Foot" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55, 0)

[node name="RayCastFootstep" type="RayCast3D" parent="Body/Foot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.189051, 0)
collision_mask = 64
collide_with_areas = true

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ics1s")
volume_db = -20.0
pitch_scale = 1.2
autoplay = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="DashCD" type="Timer" parent="."]
process_callback = 0
wait_time = 1.6
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="StairSystem" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.55, 0)

[node name="RayCastFwd" type="RayCast3D" parent="StairSystem"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.1, -0.2)
target_position = Vector3(0, -0.2, 0)
debug_shape_custom_color = Color(0.835294, 0, 0.835294, 1)

[node name="RayCastDown" type="RayCast3D" parent="StairSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.4)
hit_from_inside = true

[node name="FishingStateMachine" type="Node" parent="."]
script = ExtResource("4_4ms7y")

[node name="DefaultFishingState" type="Node" parent="."]
script = ExtResource("5_g6r3q")

[node name="FireFishingState" type="Node" parent="."]
script = ExtResource("6_j4o3f")
MIN_SPEED = 2
MAX_SPEED = 5

[node name="ThrowFishingState" type="Node" parent="."]
script = ExtResource("7_w6l6i")

[node name="RetreiveFishingState" type="Node" parent="."]
script = ExtResource("9_40ij0")

[node name="WaitingFishingState" type="Node" parent="."]
script = ExtResource("7_codwq")

[node name="WaitingTimer" type="Timer" parent="WaitingFishingState"]
wait_time = 3.0
one_shot = true

[node name="CatchFishingState" type="Node" parent="."]
script = ExtResource("8_mvy4j")

[node name="CatchingTimer" type="Timer" parent="CatchFishingState"]
wait_time = 4.0
one_shot = true

[node name="PlayingFishingState" type="Node" parent="."]
script = ExtResource("12_py8p8")

[node name="DisabledFishingState" type="Node" parent="."]
script = ExtResource("13_p57dx")

[node name="AreaInfoFishingState" type="Node" parent="."]
script = ExtResource("14_sxfw8")

[node name="InteractionState" type="Node" parent="."]
script = ExtResource("16_2w7jl")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HUD/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("16_n382o")
expand_mode = 2
stretch_mode = 5

[node name="Book" type="Sprite2D" parent="HUD"]
position = Vector2(60, 100)
scale = Vector2(0.15, 0.15)
texture = ExtResource("18_ibvvf")

[node name="Tab" type="Sprite2D" parent="HUD"]
position = Vector2(100, 80)
scale = Vector2(0.25, 0.25)
texture = ExtResource("19_tjo8l")

[node name="Livre" type="Sprite2D" parent="HUD"]
position = Vector2(60, 200)
scale = Vector2(0.15, 0.15)
texture = ExtResource("20_r8qkj")

[node name="I" type="Sprite2D" parent="HUD"]
position = Vector2(100, 170)
scale = Vector2(0.3, 0.3)
texture = ExtResource("21_5um6n")

[node name="InteractUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="InteractUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="InteractUI/CenterContainer"]
layout_mode = 2

[node name="TextInteract" type="RichTextLabel" parent="InteractUI/CenterContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 20
text = "-E- interact"
fit_content = true
autowrap_mode = 0

[node name="AreaInfoUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("14_mbniq")

[node name="VBoxContainer" type="VBoxContainer" parent="AreaInfoUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -28.5
offset_right = 75.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="AreaInfoUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Coast"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AreaInfoUI/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Panel" parent="AreaInfoUI/VBoxContainer/VBoxContainer" instance=ExtResource("15_usy7x")]
layout_mode = 2

[node name="SafePositionTimer" type="Timer" parent="."]

[connection signal="timeout" from="DashCD" to="." method="_on_dash_cd_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="WaitingFishingState/WaitingTimer" to="WaitingFishingState" method="_on_waiting_timer_timeout"]
[connection signal="timeout" from="CatchFishingState/CatchingTimer" to="CatchFishingState" method="_on_catching_timer_timeout"]
[connection signal="timeout" from="SafePositionTimer" to="." method="_on_safe_position_timer_timeout"]
